[FIX] web: control panel shouldn't flicker
currently if there is only kanban view and we apply group-by
pager is removed and height of control panel is reduce.
when remove group-by height of control panel increase.

after this commit:
flicker on control panel  will not occur buy apply group-by,
set min-height of control-panel 's right container so that height remain
as it is after apply group-by or remove group-by.

TaskId-2463582

--- a/addons/web/static/src/scss/control_panel.scss
+++ b/addons/web/static/src/scss/control_panel.scss
@@ -73,6 +73,7 @@
         display: flex;
         width: 50%;
         margin-top: 5px;
+        min-height: 30px;
 
         > .o_cp_pager {
             margin: auto 0 auto auto;
